[gd_scene load_steps=7 format=3 uid="uid://yscgsx5lmjcl"]

[ext_resource type="Script" uid="uid://bok8xx2xd78ek" path="res://player.gd" id="1_4flbx"]
[ext_resource type="SpriteFrames" uid="uid://dg662mg2wndr5" path="res://player_frames.tres" id="2_i3pqv"]
[ext_resource type="AudioStream" uid="uid://bkv2uxw3l8r1q" path="res://assets/sfx/hidechest.wav" id="5_sweqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwjto"]
size = Vector2(11.5, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]
radius = 8.0

[sub_resource type="LabelSettings" id="LabelSettings_i3pqv"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_4flbx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = ExtResource("2_i3pqv")
animation = &"death"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 16
position = Vector2(-0.25, 0.5)
shape = SubResource("RectangleShape2D_bwjto")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(13, 13)

[node name="NameLabel" type="Label" parent="."]
offset_left = -6.0
offset_top = -12.999999
offset_right = 48.0
offset_bottom = 10.000001
scale = Vector2(0.2, 0.2)

[node name="ChestDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChestDetector"]
shape = SubResource("CircleShape2D_i3pqv")

[node name="PressSpaceLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -13.0
offset_top = 9.0
offset_right = 78.0
offset_bottom = 32.0
scale = Vector2(0.3, 0.3)
text = "Press Space"
label_settings = SubResource("LabelSettings_i3pqv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="IsOccupiedLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 11.0
offset_top = -8.0
offset_right = 177.0
offset_bottom = 15.0
scale = Vector2(0.3200031, 0.35999876)
text = "Hiding spot occupied."

[node name="FootstepPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 90.0
max_polyphony = 3

[node name="ChestAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sweqy")
max_distance = 90.0

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true
